--- a/report/missingproofs.tex
+++ b/report/missingproofs.tex
@@ -1,2 +1,8 @@
 \section{Missing proofs}
-..
+\subsection{$VD^*$ is a tree}
+Kyl det ind
+
+\subsection{Point location in $VD^*$}
+Throw it in
+
+\subsection{Dynamic hashing?}
