--- a/report/exactPlanar.tex
+++ b/report/exactPlanar.tex
@@ -13,7 +13,7 @@ for the vertex-labeled case as it requires us to know the "target" vertex. Howev
 depending on $\ell$, we can give a result build upon the $r$-division:
 \begin{thm}\label{thm1}
   There is a distance oracle with space $O(n\ell^{2/3)})$, query time $O(\ell^{1/3})$ and
-  preprocessing time $O(n^2/\ell^{1/3})$.
+  preprocessing time $\tilde{O}(n\ell^{2/3})$.
 \end{thm}
 \textbf{The data structure}.
 Given a directed graph $G$, with nonnegative edge lengths and a number of labels $\ell$, we
@@ -25,32 +25,27 @@ for all $\lambda \in L$ in a hash table. For all nodes inside $R$, we store the 
 distance to all
 boundary nodes as well as the distance to all labels present in $R$ in a hash table. \\
 \\
-\indent \textbf{Query}
+\indent \textbf{Query}.
 Given the query $Q(v, \lambda)$, if $v$ is a boundary node, we can look
 up the distance in the hash table for $v$. If $v$ is not a boundary node, look up the
 distances $\delta(u,v)+\delta(u,\lambda)$ for all boundary nodes $u$ and the distance
 $\delta(v,\lambda)$ stored in the hash table for $v$ and return the minimum.
 
-\subsubsection{Analysis}
-\textbf{Preprocessing}. The $r$-division can be constructed in $O(n)$ time \cite{klein2013structured}. We then
-construct a dense distance graph, that is, we construct the graph where each edge $uv\in
-E$ has weight equal to $\delta(u,v)$ and $u$ and $v$ are both boundary nodes. We use
-Klein's multiple source shortest path algorithm \cite{klein2005multiple} to compute DDG's
-for each region of an $r$-division. For each region $R$ with $r$ nodes, we use $O(r\lg
-r)$ preprocessing to compute distances $\delta(u,v)$ in $O(\lg r)$ time where either $u$
-or $v$ is a boundary node. Since each region has $O(\sqrt{r})$ boundary nodes and $O(1)$
-holes, we can compute all distances in $O(r\lg r)$ time. Since there are $O(n/r)$
-regions, this yields a total running time of $O(nr\lg r/r)=O(n\lg r)$ to construct the
-dense distance graph. We need to store distances from all boundary nodes to (potentially)
+\subsubsection{Analysis}\label{oracle1analysis}
+\textbf{Preprocessing}. The $r$-division can be constructed in $O(n)$ time
+\cite{klein2013structured}. We need to store distances from all boundary nodes to (potentially)
 all other nodes in the graph. Henzinger et al. \cite{henzinger1997faster} gave a $O(n)$
 time algorithm for single source shortest path in planar graphs. Using this for all
-boundary nodes takes $O(n^2/\sqrt{r})$. To compute distances in the interior of each
+boundary nodes takes $O(n^2/\sqrt{r})$. We then construct the non-planar graph $G'$, where all
+edges between boundary vertices have weight $\delta(u,v)$ for boundary vertices $u$ and
+$v$. This information is computed in the previous step and takes $O(n)$ time to
+construct as the number of edges we add is $O(r)$ for each of the $O(n/r)$ regions. To compute distances in the interior of each
 region, we use Fredman and Tarjan's version of Djikstra's algorithm using Fibonacci heaps
 \cite{fredman1987fibonacci}. This requires $O(n\lg n + m)$ time for each node. Each
-region has $r$ vertices, the dense distance graph for the boundary nodes in the region has
-$O(r)$ edges and the interior is a planar graph, so it has $O(r)$ edges as well. Using
-this implementation for each node gives us a total running time of $O(r(r\lg r + r))=O(r^2\lg
-r)$. The total preprocessing thus requires $O(n^2/\sqrt{r}+r^2\lg r)$ time. \\
+region has $r$ vertices, the number of edges in each piece in the graph $G'$ for is $O(r)$ edges and the interior is a planar graph, so it has $O(r)$ edges as well. Using
+this implementation for each interior vertex gives us a total running time of $O(n(r\lg r
++ r))=O(nr\lg
+r)$. The total preprocessing thus requires $O(n^2/\sqrt{r}+nr\lg r)$ time. \\
 \\
 \textbf{Space}. For each boundary node, we store the distance to all labels. The $r$-division gives us
 $O(n/r)$ regions and ensures we
@@ -68,24 +63,16 @@ region of $v$. Thus we have a query time of $O(\sqrt{r})$. \\
 \\
 This gives us a simple trade-off, since we can pick $r$ to be sufficiently small to
 achieve constant query time, but this would give $O(n\ell)$ space. However, picking
-$r=\ell^{2/3}$ and for $n$ sufficiently large, gives us $O(n^2/\ell^{1/3})$ preprocessing time, $O(n\ell^{2/3})$ space and query time $O(\ell^{1/3})$. This gives us Theorem $\ref{thm1}$.
-
-\subsubsection{The trade-off}
-
+$r=\ell^{2/3}$ and for $n$ sufficiently large, gives us $\tilde{O}(n\ell^{2/3})$ preprocessing time, $O(n\ell^{2/3})$ space and query time $O(\ell^{1/3})$. This gives us Theorem $\ref{thm1}$.
 
 \subsection{A distance oracle with better query times}\label{oracle2}
 We now present a distance oracle which is actually multiple data structures that perform
 well depending on $\ell$ and the number of each $\lambda\in L$. We will refer to the
-number of a given label by saying the \textit{size} of that label. If $\ell$ is
-$O(\sqrt{n})$, a simple result gives us the following theorem:
-\begin{thm}\label{thm4}
-There is a distance oracle with space $O(n^{3/2})$, query time $O(1)$ and preprocessing
-time $O(n^2)$.
-\end{thm}
+number of a given label by saying the \textit{size} of that label. 
 Under the assumption that $G$ does not have $\omega(\sqrt{n})$ labels of polynomial size, we can show the following theorem:
 \begin{thm}\label{thm2}
   There is a distance oracle with space $O(n^{3/2})$, query time $O(\text{polylog}(n))$ and
-  preprocessing time $O(n^{3/2})$.
+  preprocessing time $\tilde{O}(n^{3/2})$.
 \end{thm}
 
 \subsubsection{The data structure}
@@ -185,14 +172,22 @@ edge, we can determine that $v$ belongs to the Voronoi cell of $s_3$.}
 
 \subsubsection{Analysis}\label{oracle2analysis}
 \textbf{Preprocessing}. \\
-\textit{Case 1}. We need to store shortest path
-trees from every node. Henzinger et al. showed that single source shortest paths can be
-computed in $O(n)$ time \cite{henzinger1997faster} assuming non-negative edge lengths.
-This means we can calculate the distance matrix in in $O(n^2)$. For each row (distances
-from a vertex), we can find the minimum distance to all labels in $O(n)$ time. Doing so
-for all rows requires $O(n^2)$ time. \\
+\textit{Case 1}. We need to store shortest paths from all vertices to the nearest of all
+labels. To achieve this, we construct the graph $G'$, where the
+direction of all edges are reversed in $O(n)$ time. For each label $\lambda_i$, we add a
+super vertex and connect it to all vertices with label $\lambda_i$. Call this non-planar
+graph for $G'(\lambda_i)$. We then perform Fredman and Tarjan's version of Djikstra
+\cite{fredman1987fibonacci} using Fibonacci heaps to compute SSSP from the super node in
+$O(n\lg n)$ time. The distances to each vertex correspond to the shortest path
+from the distance $\delta(u,\lambda_i)$ for a all vertices $u$. As we do this step $\ell$
+time, the total preprocessing time is $O(n\ell \lg n)$. Since $\ell=O(\sqrt{n})$, this
+yields $\tilde{O}(n^{3/2})$ time. \\
 \\
-\textit{Case 2}. The $r$-division along with its decomposition is constructed in $O(n)$
+\textit{Case 2}. First consider the case where labels have polynomial size. For all
+vertices, we need to store the shortst path to these labels. By the same analysis of case 1,
+we get that it takes $\tilde{O}(n^{3/2})$ time to compute these distances as we expect at
+most $O(\sqrt{n}$ labels with polynomial size. \\
+The $r$-division along with its decomposition is constructed in $O(n)$
 time \cite{klein2013structured}. Consider a step where the graph is separated into $P$ and $Q$. To compute all additively weighted Voronoi diagrams for every node $u\in
 P$, hole $h$ of $Q$, we need all
 shortest path to and from boundary vertices of $h$. We have shown that there are
@@ -207,7 +202,7 @@ interchanged. This takes a total of $O(n^{3/2})$ time. The diagrams are construc
 $O(r)$ time and extended in $O(\sqrt{r})$ time to support point location. We also create a hash table of
 in $O(n)$ time that can return all vertices with a given label \cite{fredman1984storing}.
 Likewise, the hash table keeping track of the size of labels takes $O(\ell)$ time to
-create. Thus, the total time for preprocessing is $O(n^{3/2})$. \\
+create. Thus, the total time for preprocessing is $\tilde{O}(n^{3/2})$. \\
 \\
 \textbf{Space}. \\
 \textit{Case 1}. We store $\ell$ distances for each vertex $v$. Since $\ell=O(\sqrt{n})$, this
@@ -241,7 +236,34 @@ there can be up to $O(\text{polylog}(n))$ vertices of a given label, which means
 to do $O(\text{polylog}(n))$ different point locations and extract the minimum. This
 yields a total query time of $O(\text{polylog}(n))$. \\
 \\
-The data structure and analysis of case 1 gives us Theorem \ref{thm4} and the data structure and analysis of case 2 gives us the distance oracle given in Theorem \ref{thm2}.
+The data structure and analysis of case 1 gives combined with the data structure and analysis of case 2 gives us the distance oracle given in Theorem \ref{thm2}.
 
-\subsubsection{The trade-off}
-TODO \\
+\subsubsection{Removing the assumption on the distribution of the labels}
+Unfortunately, handling the case when the graph can have $\omega(\sqrt{n})$ labels with
+polynomial size proved diffucult. However, to complete the distance oracle for all graph,
+we can loosen up on either space or query time. \\
+\\
+If we allow more space, we can store the distance to polynomial sized labels directly. In
+worst case, this would be the same as the trivial case, requiring $O(n\ell)$ space. \\
+\\
+If we allow worse query time, first note that we cannot have more than $O(\sqrt{n})$
+labels of size $\omega(\sqrt{n})$. So for all labels with size $\omega(\sqrt{n})$, we can
+handle as in case 1. However, for all other labels with polynomial size, by the same
+approach as in case 2, we would need to make point to point distance queries for all the
+vertices. This requires $\tilde{O}(\text{size}(\lambda))$ for a label $\lambda$, which in
+the worst case is $\tilde{o}(\sqrt{n})$.
+
+\subsubsection{The trade-off}\label{exactoracletrade}
+The two described data structures have different advantages. When the desired space
+allocation $S$ is in the range $[n,n^{3/2})$ or if $\ell=o(\sqrt{n})$, we use the first
+  data structure. The trade-off we achieve in that was $O(nr\lg r)$ for preprocessing,
+  $O(n\ell/\sqrt{r})$ for space and $O(\sqrt{r})$ for query time. For space and query in
+  the extreme cases, we have $O(n\ell)$ space or $O(\sqrt{\ell})$ query time.  \\
+Note that the space-query product is no better than the trivial $n\ell$ solution where we
+store shortest paths from all vertices to all labels in a matrix and have $O(1)$ query in
+this range. \\
+\\
+The trade-off for the second oracle with the
+assumption on labels is, given a desired space allocation $S$ when $S\geq n^{3/2}$, we get a
+query time of $O(\text{polylog}(n))$ with preprocessing $\tilde{O}(n^{3/2})$. In this
+case, the space-query product does beat that of the trivial solution.
