--- a/report/survey.tex
+++ b/report/survey.tex
@@ -192,6 +192,9 @@ amortized $O(n^{4/5}\lg^{13/5} n)$ time. Kaplan et al. give a linear sized data 
 weight updates and distance queries in $O(n^{2/3}\lg^{5/3} n)$ time. \\
 \\
 Abboud and Dahlgaard \cite{abboud2016popular} have showed that an algorithm that can
-achieve a bound of $O(n^{1/2-\varepsilon})$ for a constant $\varepsilon>0$, would mean
+achieve a bound of $O(n^{1/2-\varepsilon})$ for a constant $\varepsilon>0$ for both edge
+weight modification and distance queries, would mean
 there's a subcubic algorithm for the classic APSP problem in general graphs, which shows
-little hope for finding such an algorithm.
+little hope for finding such an algorithm. \\
+\\
+TODO: Intro to dynamic oracle + tables.
