--- a/report/report.bib
+++ b/report/report.bib
@@ -381,3 +381,61 @@
   year={2016},
   organization={IEEE}
 }
+
+@inproceedings{krauthgamer2004navigating,
+  title={Navigating nets: simple algorithms for proximity search},
+  author={Krauthgamer, Robert and Lee, James R},
+  booktitle={Proceedings of the fifteenth annual ACM-SIAM symposium on Discrete algorithms},
+  pages={798--807},
+  year={2004},
+  organization={Society for Industrial and Applied Mathematics}
+}
+
+@article{krauthgamer2005black,
+  title={The black-box complexity of nearest-neighbor search},
+  author={Krauthgamer, Robert and Lee, James R},
+  journal={Theoretical Computer Science},
+  volume={348},
+  number={2-3},
+  pages={262--276},
+  year={2005},
+  publisher={Elsevier}
+}
+
+@inproceedings{karger2002finding,
+  title={Finding nearest neighbors in growth-restricted metrics},
+  author={Karger, David R and Ruhl, Matthias},
+  booktitle={Proceedings of the thiry-fourth annual ACM symposium on Theory of computing},
+  pages={741--750},
+  year={2002},
+  organization={ACM}
+}
+
+@article{plaxton1999accessing,
+  title={Accessing nearby copies of replicated objects in a distributed environment},
+  author={Plaxton, C Greg and Rajaraman, Rajmohan and Richa, Andrea W},
+  journal={Theory of computing systems},
+  volume={32},
+  number={3},
+  pages={241--280},
+  year={1999},
+  publisher={Springer}
+}
+
+@inproceedings{beygelzimer2006cover,
+  title={Cover trees for nearest neighbor},
+  author={Beygelzimer, Alina and Kakade, Sham and Langford, John},
+  booktitle={Proceedings of the 23rd international conference on Machine learning},
+  pages={97--104},
+  year={2006},
+  organization={ACM}
+}
+
+@inproceedings{cole2006searching,
+  title={Searching dynamic point sets in spaces with bounded doubling dimension},
+  author={Cole, Richard and Gottlieb, Lee-Ad},
+  booktitle={Proceedings of the thirty-eighth annual ACM symposium on Theory of computing},
+  pages={574--583},
+  year={2006},
+  organization={ACM}
+}
