--- a/report/report.tex
+++ b/report/report.tex
@@ -92,6 +92,7 @@
 % New commands
 \newcommand{\eqdef}{\overset{\mathrm{def}}{=\joinrel=}}
 \newtheorem{thm}{Theorem}
+\newtheorem{lemma}{Lemma}
 \newcommand{\comment}[1]{%
   \text{\phantom{(#1)}} \tag{#1}}
 
